<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SEG2505</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Choisir une tache:</string>
    <string name="button_PoserQuestion">Poser une question</string>
    <string name="button_RepondreQuestion">Repondre a une question</string>
    <string name="button_LireEvaluer">Lire et evaluer une reponse</string>
    <string name="button_AjouterCategorie">Ajouter une categorie</string>
    <string name="button_listeCategorie">Liste des categories</string>
    <string name="title_activity_liste_categories">ListeCategoriesActivity</string>

    <string-array name="super_categories">
        <item>Technologies</item>
        <item>Loisirs</item>
        <item>Langues</item>
    </string-array>
    <string-array name="sous_categories_1">
        <item>informatique</item>
        <item>audiovideo</item>
        <item>telephonie</item>
    </string-array>
    <string-array name="sous_categories_2">
        <item>vins</item>
        <item>echecs</item>
        <item>soccer</item>
    </string-array>
    <string-array name="sous_categories_3">
        <item>anglais</item>
        <item>francais</item>
        <item>espagnol</item>
    </string-array>

    <string name="label_liste_categorie">Voila la liste des categories</string>
    <string name="button_showSwarm">Show Swarm</string>
    <string name="title_activity_messages">MessagesActivity</string>

    <string-array name="Technologies">
        <item>seg2505</item>
    </string-array>
    <string-array name="Loisirs">
        <item>seg2505</item>
    </string-array>
    <string-array name="Langues">
        <item>seg2505</item>
    </string-array>
    <string-array name="informatique">
        <item>seg2505</item>
    </string-array>
    <string-array name="audiovideo">
        <item>seg2505</item>
    </string-array>
    <string-array name="telephonie">
        <item>seg2505</item>
    </string-array>
    <string-array name="vins">
        <item>seg2505</item>
    </string-array>
    <string-array name="echecs">
        <item>seg2505</item>
    </string-array>
    <string-array name="soccer">
        <item>seg2505</item>
    </string-array>
    <string-array name="anglais">
        <item>seg2505</item>
    </string-array>
    <string-array name="francais">
        <item>seg2505</item>
    </string-array>
    <string-array name="espagnol">
        <item>seg2505</item>
    </string-array>

    <string name="tvQuestion">Question:</string>
    <string name="tvReponse">Réponse:</string>
    <string name="tvAnswer">Le vin à prendre Le vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendre Le vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendreLe vin à prendre</string>
    <string name="tvExpert">Expert : </string>
    <string name="tvTitle"><u>Lecture et evaluation de la reponse:</u></string>
    <string name="tvNomExpert">Robert Laganière</string>
    <string name="btnEvaluer">Évaluer</string>
    <string name="tvEvaluation"><i>Qualité de la réponse : </i></string>
    <string name="tvCommentaire">Commentaire : </string>
    <string name="RepTvQ">Question:</string>
    <string name="RepTvR">Repondre à une question:</string>
    <string name="RepcbPertinente">-Question non pertinente au domaine d\'expertise</string>
    <string name="RepcbDifficile">-Question trop difficile</string>
    <string name="RepcbIncomplet">-Question incomplète</string>
    <string name="RepcbOccup">-Je suis trop occupé pour répondre</string>
    <string name="ReptvReponse">Réponse:</string>
    <string name="ReptfRefuser">Refuser</string>
    <string name="ReptfSend">Envoyer</string>
    <string name="ReptvQuestionToAns">Quel vin serait approprie avec une salade de fruit?</string>
    <string name="title_activity_evaluation">Evaluation</string>
    <string name="tvQuestionUtil">Quel vin serait-il approprié avec une salade de fruit?Quel vin serait-il approprié avec une salade de fruit?Quel vin serait-il approprié avec une salade de fruit?Quel vin serait-il approprié avec une salade de fruit?</string>
    <string name="title_activity_addcategorie">MainActivity</string>
    <string name="title_activity_submission">MainActivity</string>

</resources>
