
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android" 
  	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".EvaluationActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvTitle"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        

        <TextView
            android:id="@+id/tvQuestion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="31dp"
            android:text="@string/tvQuestion" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="wrap_content"
            android:layout_height="101dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="31dp"
            android:height="75dp"
            android:maxHeight="75dp"
            android:maxLines="4"
            android:scrollbars="vertical"
            android:text="@string/tvQuestionUtil"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/tvReponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/tvReponse" />
	
        <TextView
            android:id="@+id/tvAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:height="180dp"
            android:maxHeight="200dp"
            android:maxLines="8"
            android:scrollbars="vertical"
            android:text="@string/tvAnswer"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.00"
        android:gravity="right" >

        <TextView
            android:id="@+id/tvExpert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/tvExpert" />

        <TextView
            android:id="@+id/tvNomExpert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginLeft="5dp"
            android:text="@string/tvNomExpert" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="bottom" >

        <Button
            android:id="@+id/btnEvaluer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:onClick="envoyerEvalOnClick"
            android:text="@string/btnEvaluer" />

    </FrameLayout>

</LinearLayout>
