<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" 
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent" 
  android:layout_height="match_parent">


<LinearLayout 
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".ReponseActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="236dp"
            android:layout_height="wrap_content"
            android:text="@string/RepTvR"
            android:textAppearance="?android:attr/textAppearanceMedium" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="31dp"
            android:text="@string/RepTvQ" />

        <TextView
            android:id="@+id/textViewQuestion"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="31dp"
            android:maxHeight="100dp"
            android:maxLines="3"
            android:scrollbars="vertical"
            android:text="@string/ReptvQuestionToAns"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvRefus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="#FF0000"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="0.00" >

        <TextView
            android:id="@+id/tvReponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/ReptvReponse" />

        <EditText
            android:id="@+id/etReponse"
            android:layout_width="wrap_content"
            android:layout_height="218dp"
            android:layout_marginLeft="13dp"
            android:background="@drawable/textlines"
            android:ems="10"
            android:gravity="top"
            android:inputType="textMultiLine" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_gravity="bottom" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom" >

            <Button
                android:id="@+id/btnRefuser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.90"
                android:onClick="envoyerRefusOnClick"
                android:text="@string/ReptfRefuser" />

            <Button
                android:id="@+id/btnEnvoyer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:onClick="envoyerReponseOnClick"
                android:text="@string/ReptfSend" />

        </LinearLayout>

    </FrameLayout>


</LinearLayout>
</ScrollView>